[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/variations/0/Var0_0.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://TimeSprite.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1440.0
margin_bottom = 900.0
color = Color( 0.254902, 0.560784, 0.529412, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 3 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.2626
margin_top = 7.93414
margin_right = 507.263
margin_bottom = 58.9341
custom_fonts/font = SubResource( 1 )
text = "Título del problema"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 88.2626
margin_top = 161.934
margin_right = 507.263
margin_bottom = 212.934
custom_fonts/font = SubResource( 1 )
text = "Puntaje:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgain" type="Label" parent="."]
margin_left = 871.036
margin_top = 161.934
margin_right = 1290.04
margin_bottom = 212.934
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "¡Vuelve a intentarlo!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 1014.0
margin_top = 794.0
margin_right = 1388.0
margin_bottom = 841.0
theme = ExtResource( 2 )
text = "SIGUIENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton2" type="Button" parent="."]
margin_left = 73.9013
margin_top = 794.0
margin_right = 554.901
margin_bottom = 841.0
theme = ExtResource( 2 )
text = "COMENZAR JUEGO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSprite" parent="." instance=ExtResource( 5 )]

[node name="BlacksContainer" type="GridContainer" parent="."]
margin_left = 136.0
margin_top = 298.0
margin_right = 1343.0
margin_bottom = 600.0
custom_constants/vseparation = 0
custom_constants/hseparation = 52
columns = 22
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhitesContainer" type="GridContainer" parent="."]
margin_left = 98.0
margin_top = 298.0
margin_right = 1343.0
margin_bottom = 600.0
mouse_filter = 2
custom_constants/vseparation = 0
custom_constants/hseparation = 52
columns = 23
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="NextButton2" to="." method="playSong"]
